--- a/GameData/nli2work/RadialOmniSeparator/1.0.0.0.htm
+++ b/GameData/nli2work/RadialOmniSeparator/1.0.0.0.htm
@@ -29,7 +29,128 @@ title="GitHub IO" alt="Pages" /></a></p>
 <div style="border:0.5px solid Tomato; background-color: #bada55; color: #FF0000; text-align:center"><h4>
 <b>DO A CLEAN INSTALL:</br> DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/RadialOmniSeparator/files">CurseForge</a></p></div>
 
-<h2 id="changes">Changes</h2>
+<h2 id="summary">Summary</h2>
+<ul>
+<li>split out of <a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/205185-*/">Hallowe'en</a></li>
+<li>can now use <code>ros</code> to search for parts in editor</li>
+<li>general linting and polishing</li>
+</ul>
+<h3 id="update">Update</h3>
+<ul>
+<li>Parts
+<ul>
+<li>[angularDrag] 1 --&gt; 2</li>
+<li>[bulkheadProfiles] add ' ,size...'</li>
+<li>linting and organization organization</li>
+<li>some 1000 git sandpaper applied (pun intended)</li>
+</ul></li>
+</ul>
+<h3 id="compatibility">Compatibility</h3>
+<ul>
+<li>Update
+<ul>
+<li>&lt;TweakScale.cfg&gt; v1.0.0.0</li>
+</ul></li>
+</ul>
+<h3 id="config">Config</h3>
+<ul>
+<li>Add
+<ul>
+<li>&lt;RadialOmniSeparator.cfg&gt; v1.0.0.0</li>
+<li>closes #9 - Create &lt;RadialOmniSeparator.cfg&gt;</li>
+</ul></li>
+</ul>
+<h3 id="documentation">Documentation</h3>
+<ul>
+<li>&lt;RadialOmniSeparator.version&gt;
+<ul>
+<li>update</li>
+<li>remove: [KSP_VERSION_MAX]</li>
+</ul></li>
+</ul>
+<h3 id="asset-updates">Asset Updates</h3>
+<ul>
+<li>create Assets/ folder</li>
+<li>convert from mesh to MODEL</li>
+<li>rename
+<ul>
+<li>models to unique names</li>
+<li>textures to unique names</li>
+</ul></li>
+<li>update
+<ul>
+<li>model pointers (.png et al to .dds)</li>
+<li>model texture pointers to new names</li>
+</ul></li>
+<li>relocate assets to Assets/</li>
+<li>eliminate
+<ul>
+<li>duplicate textures</li>
+<li>duplicate models</li>
+</ul></li>
+<li>relocate part.cfg to Parts/
+<ul>
+<li>closes #8 - Part Asset Updates</li>
+</ul></li>
+</ul>
+<h3 id="docs">docs/</h3>
+<ul>
+<li>Update</li>
+<li>Add
+<ul>
+<li>[<code>_config.yml</code>]</li>
+<li>[Attribution.md] v1.0.7.1</li>
+<li>[ManualInstallation.md] v1.1.8.0</li>
+<li>[404.md] v1.0.3.2</li>
+<li>[LegalMumboJumbo.md] v1.0.5.1</li>
+<li>[Localizations.md] v1.1.7.0</li>
+<li>[Marketing.md] v1.0.1.0</li>
+<li>[Notices.md] v1.0.1.0</li>
+<li>[Disclaimer.md] v1.0.1.0</li>
+<li>[PartsCatalog.md] v1.1.4.1</li>
+<li>[Why.md] v1.1.0.0</li>
+<li>closes #5 - Create GitHub Pages</li>
+</ul></li>
+</ul>
+<h3 id="create">Create</h3>
+<ul>
+<li>Hero.png
+<ul>
+<li>closes #6 - Create HeroLogo.png</li>
+</ul></li>
+</ul>
+<h3 id="localization">Localization</h3>
+<ul>
+<li>Create
+<ul>
+<li>Localization/
+<ul>
+<li>&lt;en-us.cfg&gt;</li>
+<li>[readme.md] v2.1.2.0</li>
+<li>[quickstart.md] v1.0.1.1</li>
+</ul></li>
+<li>closes #7 - Create Localization directory and contents</li>
+<li>updates #10 - Localization - Master</li>
+<li>closes #11 - English &lt;us-en.cfg&gt;</li>
+</ul></li>
+<li>Add localized tags to parts
+<ul>
+<li>[RadialOmniSeparator.cfg] v1.0.0.0</li>
+<li>adds localized tags to parts</li>
+</ul></li>
+</ul>
+<h3 id="status">Status</h3>
+<ul>
+<li>Issues
+<ul>
+<li>closes #1 - Radial Omni Separator (ROS) 1.0.0.0-release
+<code>&lt;Thank you nli2work&gt;</code> edition</li>
+<li>closes #2 - 1.0.0.0 Create Legal Mumbo Jumbo</li>
+<li>closes #3 - 1.0.0.0 Create Documentation</li>
+<li>closes #4 - 1.0.0.0 Create Social Media Presence</li>
+</ul></li>
+</ul>
 <hr />
 <img src="https://raw.githubusercontent.com/zer0Kerbal/RadialOmniSeparator/master/img/hero-03.png" alt="Tableau" style="zoom:50%;" />
 
@@ -50,7 +171,7 @@ title="Issue Tracker">Known Issues</a></li>
 href="https://zer0kerbal.github.io/RadialOmniSeparator/"
 title="GitHub Pages">Pages</a></li>
 </ul>
-<h2 id="localization">Localization</h2>
+<h2 id="localization-1">Localization</h2>
 <blockquote>
 <ul>
 <li><img
