--- a/GameData/nli2work/RadialOmniSeparator/ManualInstallation.htm
+++ b/GameData/nli2work/RadialOmniSeparator/ManualInstallation.htm
@@ -1,14 +1,10 @@
-<!-- ManualInstallation.md v1.1.8.1
-Radial Omni Separator (ROS)
-created: 01 Oct 2019
-updated: 29 Jul 2022 -->
 
-<!-- based upon work by Lisias -->
+
+
 
 <h1 id="radial-omni-separator-ros">Radial Omni Separator (ROS)</h1>
 <p><a href="./index.md">Home</a></p>
-<p>Hallowe'en themed parts pack for Kerbal Space Program.
-Jack-O'Lanterns not included.</p>
+<p>Radial Omni Separator parts pack for Kerbal Space Program.</p>
 <h2 id="installation-instructions">Installation Instructions</h2>
 <h3 id="using-curseforgeoverwolf-app-or-ckan">Using CurseForge/OverWolf
 app or CKAN</h3>
