--- a/GameData/nli2work/RadialOmniSeparator/readme.htm
+++ b/GameData/nli2work/RadialOmniSeparator/readme.htm
@@ -1,9 +1,6 @@
-<!-- readme.md v1.6.9.8
-Radial Omni Separator (ROS)
-created: 17 Jul 2017
-updated: 15 Sep 2022 -->
 
-<!--this file: CC BY-ND 4.0 by zer0Kerbal-->
+
+
 
 <p><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/209926-*/"
@@ -38,13 +35,19 @@ src="https://img.shields.io/badge/GitHub-Pages-white?style=plastic&amp;labelColo
 title="GitHub IO" alt="Pages" /></a></p>
 <h1 id="radial-omni-separator-ros">Radial Omni Separator (ROS)</h1>
 <p>Radial Omni Separator parts pack for Kerbal Space Program.</p>
-<h2 id="by-zer0kerbal">By <a
+<h2 id="by-zer0kerbal-originally-by-nli2work">By <a
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"
-title="zer0Kerbal"><code>zer0Kerbal</code></a></h2>
+title="zer0Kerbal"><code>zer0Kerbal</code></a>, originally by <a
+href="https://forum.kerbalspaceprogram.com/index.php?/profile/106805-*/"
+title="nli2work"><code>nli2work</code></a></h2>
 <p>adopted with <em>express</em> permission and brought to you by
 <em>KerbSimpleCo</em></p>
 <img src="https://raw.githubusercontent.com/zer0Kerbal/RadialOmniSeparator/master/img/HeroLogo_1920x1920.png" alt="RadialOmniSeparator Hero" width="50%" height="50%">
 
+<h3 id="provides">Provides</h3>
+<ul>
+<li>six sizes of radial separators</li>
+</ul>
 <h3 id="see-more">See more</h3>
 <blockquote>
 <ul>
@@ -153,7 +156,7 @@ href="https://forum.kerbalspaceprogram.com/index.php?/topic/179030-*/"
 title="TweakScale">TweakScale (TWK)</a></li>
 </ul>
 <h3 id="tags">Tags</h3>
-<p>parts, config, flags</p>
+<p>parts</p>
 <div style="border:0.5px solid Tomato; background-color: #BADA55; color: #FF0000; text-align:center">
   <p><b>red box below is a link to forum post on how to get support</b></p>
   <a href="https://forum.kerbalspaceprogram.com/index.php?/topic/83212-*">
@@ -165,7 +168,7 @@ title="TweakScale">TweakScale (TWK)</a></li>
 <ul>
 <li><a
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/106805-*/"
-title="nli2work">'nli2work`</a> - for these glorius parts!</li>
+title="nli2work">'nli2work`</a> - for these glorious parts!</li>
 <li>see <a
 href="https://zer0kerbal.github.io/RadialOmniSeparator/Attributions"
 title="Attribution">Attribution.md</a> for more comprehensive list</li>
@@ -195,9 +198,9 @@ licenses</strong></em></p>
 <h5 id="see-noticesmd-for-more-legal-mumbo-jumbo">see <a
 href="https://zer0kerbal.github.io/RadialOmniSeparator/Notices"
 title="Notices">Notices.md</a> for more <em>legal mumbo jumbo</em></h5>
-<h4 id="original-0---author-zer0kerbal">Original (0) - Author: <a
-href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"
-title="zer0Kerbal"><code>zer0Kerbal</code></a></h4>
+<h4 id="original-0---author-nli2work">Original (0) - Author: <a
+href="https://forum.kerbalspaceprogram.com/index.php?/profile/106805-*/"
+title="nli2work"><code>nli2work</code></a></h4>
 <blockquote>
 <p>Forum: <a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/205185-*/"
@@ -241,25 +244,25 @@ href="https://buymeacoffee.com/zer0Kerbal/" title="Buy Me A Snack"><img
 src="https://img.shields.io/badge/Buy%20Me%20a%20-Snack!-FFDD00?style=for-the-badge&amp;logo=buymeacoffee/"
 title="Buy Me A Snack" alt="Buy zer0Kerbal a snack" /></a></p>
 <p><em>and it is true.</em></p>
-<!-- mod links -->
 
-<!--- mod -->
 
-<!--- mod provenance -->
 
-<!--- license provenance -->
 
-<!--- CKAN -->
 
-<!--- release links -->
 
-<!-- Kerbal Space Program -->
 
-<!-- links to add-ons/mods -->
 
-<!-- financial support -->
 
-<!-- Localization -->
+
+
+
+
+
+
+
+
+
+
 
 <hr />
 <h4 id="connect-with-me">Connect with me</h4>
@@ -296,7 +299,7 @@ now.</li>
 <li>CurseForge. Right now.</li>
 <li>SpaceDock (and CKAN users). Soon™</li>
 </ol>
-<!-- footnotes -->
+
 
 <section id="footnotes" class="footnotes footnotes-end-of-document"
 role="doc-endnotes">
