--- a/GameData/nli2work/RadialOmniSeparator/readme.htm
+++ b/GameData/nli2work/RadialOmniSeparator/readme.htm
@@ -34,7 +34,7 @@ title="GitHub Pages"><img
 src="https://img.shields.io/badge/GitHub-Pages-white?style=plastic&amp;labelColor=9cf&amp;logoColor=181717&amp;logo=github"
 title="GitHub IO" alt="Pages" /></a></p>
 <h1 id="radial-omni-separator-ros">Radial Omni Separator (ROS)</h1>
-<p>Radial Omni Separator parts pack for Kerbal Space Program.</p>
+<p>Radial Separator parts pack for Kerbal Space Program.</p>
 <h2 id="by-zer0kerbal-originally-by-nli2work">By <a
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"
 title="zer0Kerbal"><code>zer0Kerbal</code></a>, originally by <a
@@ -91,6 +91,10 @@ title="Issues">GitHub</a>.</li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/EN.png"
 title="English" alt="English" /> English</li>
+<li><img
+src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/IT.png"
+title="Italiano" alt="Italiano" /> Italian (Italiano) - thank you <a
+href="https://github.com/MattNot">MattNot</a></li>
 <li><em><strong>your translation here</strong></em></li>
 </ul>
 <p>HELP WANTED - See the <a
