--- a/GameData/nli2work/RadialOmniSeparator/readme.htm
+++ b/GameData/nli2work/RadialOmniSeparator/readme.htm
@@ -95,6 +95,10 @@ title="English" alt="English" /> English</li>
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/IT.png"
 title="Italiano" alt="Italiano" /> Italian (Italiano) - thank you <a
 href="https://github.com/MattNot">MattNot</a></li>
+<li><img
+src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/NO.png"
+title="Norsk" alt="Norsk" /> Norwegian (Norsk) &lt;no-no.cfg&gt; - thank
+you <a href="https://github.com/tplive">tplive</a></li>
 <li><em><strong>your translation here</strong></em></li>
 </ul>
 <p>HELP WANTED - See the <a
