--- a/GameData/nli2work/RadialOmniSeparator/1.0.0.1.htm
+++ b/GameData/nli2work/RadialOmniSeparator/1.0.0.1.htm
@@ -3,7 +3,7 @@
 <p><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/209926-*/"
 title="Radial Omni Separator (ROS)"><img
-src="https://img.shields.io/badge/Hallowe&#39;en%20(ROS)%20-v1.0.0.1--release-BADA55.svg?style=plastic&amp;labelColor=darkgreen/"
+src="https://img.shields.io/badge/Radial%20Omni%20Separator%20(ROS)%20-v1.0.0.1--release-BADA55.svg?style=plastic&amp;labelColor=darkgreen/"
 title="1.0.0.1-release" alt="Radial Omni Separator Version" /></a><br />
 <a href="http://kerbalspaceprogram.com/"
 title="Kerbal Space Program"><img
