--- a/GameData/nli2work/RadialOmniSeparator/Attributions.htm
+++ b/GameData/nli2work/RadialOmniSeparator/Attributions.htm
@@ -32,6 +32,7 @@
 <h3 id="translations">Translations</h3>
 <ul>
   <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/EN.png " alt="English" style="zoom:125%;" /> English</li>
+  <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/ES.png " alt="Español" style="zoom:125%;" /> Spanish (Español) - thank you <a ref="https://github.com/taicoding"> taicoding</a></li>
   <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/IT.png " alt="Italiano" style="zoom:125%;" /> Italian (Italiano) - thank you <a ref="https://github.com/MattNot"> MattNot</a></li>
   <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/NO.png " alt="Norsk" style="zoom:125%;" /> Norwegian (Norsk) - thank you <a ref="https://github.com/tplive"> tplive</a></li>
   <li><small>Additions and corrections welcome!</small></li>
