--- a/GameData/nli2work/RadialOmniSeparator/readme.htm
+++ b/GameData/nli2work/RadialOmniSeparator/readme.htm
@@ -92,13 +92,17 @@ title="Issues">GitHub</a>.</li>
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/EN.png"
 title="English" alt="English" /> English</li>
 <li><img
+src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/ES.png"
+title="Español" alt="Español" /> Spanish (Español) - thank you <a
+href="https://github.com/taicoding">taicoding</a></li>
+<li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/IT.png"
 title="Italiano" alt="Italiano" /> Italian (Italiano) - thank you <a
 href="https://github.com/MattNot">MattNot</a></li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/NO.png"
-title="Norsk" alt="Norsk" /> Norwegian (Norsk) &lt;no-no.cfg&gt; - thank
-you <a href="https://github.com/tplive">tplive</a></li>
+title="Norsk" alt="Norsk" /> Norwegian (Norsk) - thank you <a
+href="https://github.com/tplive">tplive</a></li>
 <li><em><strong>your translation here</strong></em></li>
 </ul>
 <p>HELP WANTED - See the <a
