--- a/GameData/nli2work/RadialOmniSeparator/1.0.0.4.htm
+++ b/GameData/nli2work/RadialOmniSeparator/1.0.0.4.htm
@@ -35,11 +35,12 @@ edition</h1>
 <b>For best results - DO A CLEAN INSTALL; DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/RadialOmniSeparator/files">CurseForge</a></p></div>
 
 <h2 id="summary">Summary</h2>
-<p>adds
+<p>NEW
 <img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/BR.png " alt="Português Brasil" style="zoom:100%;" />
 Brazilian Portuguese (Português Brasil) - thank you
 <a ref="https://github.com/Lisias"> Lisias</a></p>
-<h3 id="add">Add</h3>
+<ul>
+<li>Add
 <ul>
 <li>Brazilian Portuguese (Português Brasil)
 <ul>
@@ -47,19 +48,30 @@ Brazilian Portuguese (Português Brasil) - thank you
 <li>Thank you <a href="https://github.com/Lisias">Lisias</a></li>
 </ul></li>
 <li>updates #10 - Localization - Master</li>
-<li>closes #14 - Spanish (Español) &lt;es-es.cfg&gt;</li>
+<li>closes #12 - Brazilian Portuguese (Português Brasil)
+&lt;pt-br.cfg&gt;</li>
+</ul></li>
+<li>Update
+<ul>
+<li>textures from .png (393kb) --&gt; .dds (341kb)</li>
+<li>model texture pointers</li>
+</ul></li>
 </ul>
 <h3 id="status-1004">Status 1.0.0.4</h3>
 <ul>
 <li>Issues
 <ul>
-<li>closes #50 - Radial Omni Separator (ROS) 1.0.0.4-release
-<code>&lt;taicoding Español&gt;</code></li>
-<li>closes #51 - 1.0.0.4 Verify Legal Mumbo Jumbo</li>
-<li>closes #52 - 1.0.0.4 Update Documentation</li>
-<li>closes #53 - 1.0.0.4 Update Social Media</li>
+<li>closes #56 - Radial Omni Separator (ROS) 1.0.0.4-release
+<code>&lt;Separador Radial Omni&gt;</code> edition</li>
+<li>closes #57 - 1.0.0.4 Additional Tasks</li>
+<li>closes #34 - 1.0.1.0 Update Social Media</li>
+<li>closes #33 - 1.0.1.0 Update Documentation</li>
+<li>closes #32 - 1.0.1.0 Verify Legal Mumbo Jumbo</li>
+<li>closes #31 - Radial Omni Separator (ROS) 1.0.1.0-release
+<code>&lt;EDITION&gt;</code></li>
 </ul></li>
 </ul>
+<hr />
 <h2 id="see-more">See More</h2>
 <ul>
 <li><a href="https://zer0kerbal.github.io/RadialOmniSeparator/"
